--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <link rel="icon" type="image/png" href="favicon.ico" sizes="16x16" />
+    <link rel="icon" type="image/png" href="baseline_schedule_send_white_24dp.ico" sizes="16x16" />
     <title>Holoschedule</title>
     <script type="text/javascript">
         ! function (n) {
